2019-05-22  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c (OpStr): Improve opcode mnemonics.

2019-05-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview,ftstring,ftgrid] Add keystroke emulator.

	* src/{ftview,ftstring,ftgrid}.c
	(parse_cmdline): New option to pass keystroke sequence.
	(Process_Event): Consume keystrokes from buffer before listening.
	(usage): Document it.
	* src/{ftview,ftstring,ftgrid}.1: Document it.

2019-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Prepare for scripting.

	* src/{ftview.c,ftstring.c,ftgrid.c,ftmulti.c,ftgamma.c}
	(main, Process_Event): Consolidate event handling.

2019-04-28  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Add axis grouping.

	If axis grouping (key `A') is active, hidden axes that have the same
	name tag as a visible one are not displayed.  Additionally they
	receive the same values as the corresponding visible axis.

	* src/ftmulti.c (grouping, hidden, shown_axes, num_shown_axes): New
	global variables.
	(set_up_axes): New function to group axes.
	(Render_All, Render_Text, Help): Updated.
	(Process_Event): Handle key `A'.
	Handle grouping of axis values.
	(main): Initialize `shown_axes' and `hidden'; call `set_up_axes'.
	Update code to display axes tags.

2019-04-26  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c (Help, main): Mark hidden axes with an asterisk.

2019-04-26  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c: Various minor clean-ups.

2019-04-06  Werner Lemberg  <wl@gnu.org>

	For distribution, replace `.tar.bz2' with `.tar.xz' bundles.

	* Makefile (dist): Do it.

2019-03-15  Werner Lemberg  <wl@gnu.org>

	* Version 2.10.0 released.
	==========================


	Tag sources with `VER-2-10-0.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect/ftinspect.pro: Updated.

	* Makefile (version, winversion): Since the minor version number has
	two digits now, never omit the patch number.  We would get ambiguous
	zip file names otherwise.

	* src/ftdump.c (main): Avoid compiler warning.
